로컬 작업 내용으로 서버 강제 업테이ë트 1. 취향 기반 식재료, 조미료 추천을 위한 LLM모델 추가. - .properties에 exaone3.5:2.4b 모델 추가.
2. 취향 분석 및 연관 키워드 추천 기능 구현